# abstract

./: LICENSE  README.md  abstract.cabal
app/: Main.hs
examples/: 003-let.scm  004-nested-let.scm  005-let-star.scm  006-decrement.scm  006-pairs.scm  007-logic.scm  007-minus.scm  008-factorial.scm  008-small-lib.scm  009-decrement.scm  009-factorial-of-5.scm  010-lists.scm  010-minus.scm  011-decoders.scm  011-factorial.scm  012-factorial-of-5.scm  013-comment.scm  013-fib.scm  014-lists.scm  015-charlists.scm  016-sugar.scm  017-uppercase.scm  018-calc.scm  099-alpha.scm  100-power.scm  999-eta.scm
samples/: 001-inc.scm  005-let-star.scm  006-decrement.scm  006-factorial.scm  007-minus.scm  008-factorial.scm  008-fuckedtorial.scm  009-factorial-of-5.scm  2-nested-let.scm  3-nested-let.scm  4-nested-let.scm  calc1.scm  calc2.scm  calc3.scm  interp.scm  lib.scm  pairs.scm  repl.scm  scheme0.scm  scheme1.scm  scheme2.scm  scheme3.scm
src/: Calc.hs  Codec.hs  Optional.hs  Scheme.hs  Show.hs  Term.hs  Term.hs.bak  Term.hs.bak2  TermTest.hs
src/Syntax/: Calc.hs  Scheme.hs  Sexp.hs
test/: .#TermSpec.hs  TermSpec.hs
