name:                abstract
version:             0.1.0.0
synopsis:            Abstract Lambda Calculus
homepage:            https://github.com/maschisma/abstract#readme
license:             ISC
license-file:        LICENSE
author:              Dmitry Bushmelev
maintainer:          dmitrii.bushmelev@gmail.com
copyright:           2018 Dmitry Bushmelev
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable calc
  hs-source-dirs:      src
  main-is:             Calc.hs
  other-modules:       Optional
                     , Show
                     , Syntax.Calc
                     , Syntax.Sexp
                     , Term
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
