name:                abstract
version:             0.1.0.0
synopsis:            Abstract Lambda Calculus
homepage:            https://github.com/maschisma/abstract#readme
license:             ISC
license-file:        LICENSE
author:              Dmitry Bushmelev
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Optional, Show, Syntax.Calc, Syntax.Scheme, Syntax.Sexp, Term
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5


executable calc
  hs-source-dirs:      src
  main-is:             Calc.hs
  default-language:    Haskell2010
  other-modules:       Optional
                     , Show
                     , Syntax.Calc
                     , Syntax.Sexp
                     , Term
  build-depends:       base >= 4.7 && < 5, abstract


executable scheme
  hs-source-dirs:      src
  main-is:             Scheme.hs
  default-language:    Haskell2010
  other-modules:       Optional
                     , Show
                     , Syntax.Scheme
                     , Syntax.Sexp
                     , Term
  build-depends:       base >= 4.7 && < 5, abstract

test-suite abstract-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules: TermSpec
  hs-source-dirs: test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base >=4.7 && <5
               , abstract
               , hspec
               , hspec-discover
  default-language: Haskell2010
