name:                abstract
version:             0.1.0.0
synopsis:            Abstract Lambda Calculus
homepage:            https://github.com/maschisma/abstract#readme
license:             ISC
license-file:        LICENSE
author:              Dmitry Bushmelev
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Codec, Optional, Show, Syntax.Scheme, Syntax.Sexp, Term
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable abstract
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, abstract

test-suite abstract-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules: TermSpec
  hs-source-dirs: test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base >=4.7 && <5
               , abstract
               , hspec
               , hspec-discover
  default-language: Haskell2010
